--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -19,5 +19,11 @@
         android:title="Account"
         android:icon="@drawable/baseline_account_circle_24"
         app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/nav_event"
+        android:enabled="true"
+        android:title="Event"
+        android:icon="@drawable/baseline_event_24"
+        app:showAsAction="ifRoom"/>
 
 </menu>
