--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -14,7 +14,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="16dp">
 
@@ -24,26 +24,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="25dp"
-                android:hint="Event Name"/>
+                android:hint="Event Name" />
 
             <!-- Date Picker -->
             <DatePicker
                 android:id="@+id/datePicker"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:calendarViewShown="false"/>
+                android:layout_height="276dp"
+                android:calendarViewShown="false" />
 
+            <Button
+                android:id="@+id/eventBtn"
+                android:layout_width="225dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="Add Event"
+                android:backgroundTint="#FF0000"
+
+                app:layout_constraintTop_toBottomOf="@+id/datePicker" />
 
 
 
             <!-- Add Event Button -->
-            <Button
-                android:id="@+id/buttonAddEvent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-            android:background="#FF5733"
-                android:layout_marginTop="16dp"
-                android:text="Add Event"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
