--- a/app/src/main/res/layout/activity_item_comments.xml
+++ b/app/src/main/res/layout/activity_item_comments.xml
@@ -1,9 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/commentTextView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".item_comments">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_height="wrap_content"
+    android:padding="8dp"
+    android:textSize="16sp" />
