--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,47 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".PostActivity">
-
-    <!-- Email EditText -->
+    tools:context=".MainActivity2">
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/postText"
+        android:id="@+id/commentlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="224dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextEmail"
+            android:id="@+id/addComment"
             android:layout_width="386dp"
             android:layout_height="50dp"
-            android:hint="Comment"
+            android:hint="Add Post"
 
-            android:textColor="@color/black"
-            android:textColorHint="#808080" />
+            />
     </com.google.android.material.textfield.TextInputLayout>
-
-
-
-
     <Button
-        android:id="@+id/btnPost"
-        android:layout_width="225dp"
-        android:layout_height="0dp"
-       android:layout_margin="16dp"
-        android:text="Add Event"
-        android:backgroundTint="#FF0000"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/button12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:layout_marginLeft="120dp"
+        app:layout_constraintTop_toBottomOf="@+id/commentlayout"
+        tools:layout_editor_absoluteX="160dp"
+        tools:layout_editor_absoluteY="300dp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/comment_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/button12"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/postText" />
-
-
-
-
-
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
