--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -13,6 +13,7 @@
         android:layout_margin="16dp">
 
         <LinearLayout
+            android:id="@+id/addEventForm"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -38,14 +39,21 @@
                 android:layout_width="225dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="Add Event"
                 android:backgroundTint="#FF0000"
+                android:text="Add Event"
 
                 app:layout_constraintTop_toBottomOf="@+id/datePicker" />
 
 
-
             <!-- Add Event Button -->
         </LinearLayout>
+
+
     </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:id="@+id/event_view_list"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
