--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -21,7 +21,7 @@
             android:id="@+id/addComment"
             android:layout_width="386dp"
             android:layout_height="50dp"
-            android:hint="Add Post"
+            android:hint="Type your Post"
 
             />
     </com.google.android.material.textfield.TextInputLayout>
@@ -29,7 +29,7 @@
         android:id="@+id/button12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Add Post"
         android:layout_marginLeft="120dp"
         app:layout_constraintTop_toBottomOf="@+id/commentlayout"
         tools:layout_editor_absoluteX="160dp"
@@ -42,5 +42,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="Welcome, user@email.com"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
