--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -5,5 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FriendActivity">
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/friend_RecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
