--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/black"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SignInActivity">
@@ -15,17 +15,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="224dp"
         app:layout_constraintEnd_toEndOf="parent"
-
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextEmail"
             android:layout_width="386dp"
+            android:layout_margin="20dp"
             android:layout_height="50dp"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textColorHint="#808080" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -36,6 +38,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:passwordToggleEnabled="true"
@@ -47,8 +51,10 @@
             android:layout_width="386dp"
             android:layout_height="50dp"
             android:hint="Password"
+
+
             android:inputType="textPassword"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textColorHint="#808080" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -58,26 +64,29 @@
         android:id="@+id/buttonSignIn"
         android:layout_width="225dp"
         android:layout_height="0dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="15dp"
         android:text="Sign In"
-        android:backgroundTint="#FF0000"
+        android:textSize="22sp"
+        android:backgroundTint="@color/primaryColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />
 
     <!-- Sign Up Button -->
+
+
     <Button
         android:id="@+id/buttonGoToSignUp"
-        android:layout_width="159dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="252dp"
+        android:layout_width="225dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/primaryColor"
         android:text="Sign Up"
-        android:textColor="#FF0000"
-        android:backgroundTint="@color/black"
+        android:textColor="@color/white"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />
-
 
     <TextView
         android:id="@+id/editTextText2"
@@ -85,8 +94,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="text"
-        android:text="Sign In"
-        android:textColor="#FF0000"
+        android:text="Welcome Back!"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
@@ -96,19 +104,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.865" />
 
-    <TextView
-        android:id="@+id/editTextText4"
-        android:layout_width="170dp"
-        android:layout_height="21dp"
-        android:layout_marginBottom="10dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="New and need an account?"
-        app:layout_constraintBottom_toTopOf="@+id/buttonGoToSignUp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.522"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="141dp"
@@ -117,6 +112,6 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/icon" />
+        app:srcCompat="@drawable/logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
