--- a/app/src/main/res/anim/fade_in.xml
+++ b/app/src/main/res/anim/fade_in.xml
@@ -1,7 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- res/anim/fade_in.xml -->
-<alpha xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/decelerate_interpolator"
-    android:fromAlpha="0.0"
-    android:toAlpha="1.0"
-    android:duration="1500" />
+<resources>
+</resources>
