--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,24 +8,25 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="350dp"
-        android:layout_height="450dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="80dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginEnd="32dp"
+
+
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/logo"
-        tools:layout_editor_absoluteY="16dp"
-      />
+        tools:layout_editor_absoluteY="94dp" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
         android:text="Movie Mate"
-        android:textSize="30dp"
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="486dp"
-       />
+        android:textSize="20dp"
 
+        app:layout_constraintTop_toBottomOf="@id/imageView2"
+        tools:layout_editor_absoluteX="140dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
