--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -11,22 +11,23 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginEnd="32dp"
-
+        android:layout_marginTop="150dp"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.463"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/logo"
-        tools:layout_editor_absoluteY="94dp" />
+        tools:layout_editor_absoluteY="206dp" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="48dp"
         android:text="Movie Mate"
-        android:textSize="20dp"
-
+        android:textSize="23dp"
+        android:textStyle="bold"
+        android:layout_marginLeft="150dp"
         app:layout_constraintTop_toBottomOf="@id/imageView2"
-        tools:layout_editor_absoluteX="140dp" />
+        tools:layout_editor_absoluteX="136dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
