--- a/app/src/main/res/layout/movie.xml
+++ b/app/src/main/res/layout/movie.xml
@@ -35,7 +35,7 @@
                 android:layout_weight="1" />
             <Button
                 android:id="@+id/addPost"
-
+                android:backgroundTint="@color/yellow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Add Post" />
