--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -39,12 +39,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:backgroundTint="@color/yellow"
             android:text="Events"
             tools:layout_editor_absoluteX="203dp"
             tools:layout_editor_absoluteY="76dp" />
 
         <Button
             android:id="@+id/btnFriends"
+            android:backgroundTint="@color/yellow"
+            android:layout_marginLeft="15dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
