--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -42,7 +42,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/addComment"
-            android:layout_width="300dp"
+            android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_marginBottom="50dp"
             android:layout_marginStart="20dp"
@@ -52,9 +52,10 @@
 
         <Button
             android:id="@+id/button12"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
-
+            android:layout_width="150dp"
+            android:layout_marginTop="15sp"
+            android:layout_height="50dp"
+            android:backgroundTint="@color/yellow"
             android:text="Add Post" />
 
         <Space
