--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,7 +23,7 @@
             android:layout_height="50dp"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textColorHint="#808080" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -45,7 +45,7 @@
             android:layout_height="50dp"
             android:hint="Password"
             android:inputType="textPassword"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textColorHint="#808080" />
     </com.google.android.material.textfield.TextInputLayout>
 
